--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -3,10 +3,10 @@
     justify-self: end;
     background: #FFFFFF;
     border-radius: 10px 10px;
-    background-image: url(../../images/like.jpg);
-    background-repeat: no-repeat;
-    background-position: 92% 91%;
-    min-height: 361px;}
-    .element:nth-child(even) {
+    min-height: 361px;
+    position: relative;}
+    
+.element:nth-child(even) {
         justify-self: start;
     }
+    
