--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,11 +1,14 @@
-.popup__input-name {
+.popup__input {
     border: white;
     font-family: 'Inter', Arial, Helvetica, sans-serif;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-     margin-bottom: 30px;
-     min-height: 27px;
-     font-style: normal;
+    margin-bottom: 30px;
+    min-height: 27px;
+    font-style: normal;
     font-weight: normal;
     font-size: 14px;
     line-height: 17px;
+    }
+.popup__input:nth-child(2) {
+    margin-bottom: 48px;
 }
