--- a/blocks/popup/__submit-btn/popup__submit-btn.css
+++ b/blocks/popup/__submit-btn/popup__submit-btn.css
@@ -10,6 +10,7 @@
     color: #FFFFFF;
     border-radius: 2px;
     cursor: pointer;
+    border: none;
 }
 .popup__submit-btn:hover {
     background-color: rgba(0, 0, 0, .8);
