--- a/blocks/profile/__about/profile__about.css
+++ b/blocks/profile/__about/profile__about.css
@@ -5,10 +5,12 @@
     font-size: 18px;
     line-height: 22px;
     color: #FFFFFF;
-    margin: 18px 0 0 0;}
+    margin: 18px 0 0 0;
+    text-overflow: ellipsis;}
 
 @media screen and (max-width: 320px){
     .profile__about{
         font-size: 14px;
         line-height: 17px;
+        margin-top: 14px;
         text-align: center;}}
