--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -5,6 +5,7 @@
     line-height: 114%;
     color: #FFFFFF;
     margin: 0;
+    text-overflow: ellipsis;
 }
 @media screen and (max-width: 702px){
    .profile__name{
