--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -20,4 +20,4 @@
         background-image: url('../../../images/edit_button_320px.svg');
         width: 18px;
         height: 18px;
-        margin: auto auto 35px 10px;
+        margin: auto auto 35px 10px;}
