--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -6,5 +6,4 @@
     min-height: 361px;
     position: relative;}
 .element:nth-child(even) {
-    justify-self: start;
-}
+    justify-self: start;}
