--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -5,7 +5,7 @@
     line-height: 114%;
     color: #FFFFFF;
     margin: 0;
-    text-overflow: ellipsis;
+    text-overflow: clip;
 }
 @media screen and (max-width: 702px){
    .profile__name{
