--- a/blocks/popup/__close-btn/popup__close-btn.css
+++ b/blocks/popup/__close-btn/popup__close-btn.css
@@ -13,8 +13,7 @@
 }
 .popup__close-btn:hover {
     opacity: .6;
-    transform: rotate(45deg);
-}
+    transform: rotate(45deg);}
 
 @media screen and (max-width:360px) {
     .popup__close-btn {
