--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -7,7 +7,11 @@
   width: 100%;
   height: 100%;
   background-color: rgba(30, 30, 30, 0.9);
-  display: none;
   justify-content: center;
   align-items: center;
+  visibility: hidden;
+  opacity: 0;
+  display: flex;
+  transition: visibility 1s, opacity 1s linear;
 }
+
