--- a/pages/index.css
+++ b/pages/index.css
@@ -17,18 +17,33 @@
 @import url(../blocks/element/__title/element__title.css);
 @import url(../blocks/element/__like/element__like.css);
 @import url(../blocks/element/__like/_active/element__like_active.css);
+@import url(../blocks/element/__remove/element__remove.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/_visible/popup_visible.css);
 @import url(../blocks/popup/__window/popup__window.css);
+@import url(../blocks/popup/__window-zoom/popup__window-zoom.css);
+@import url(../blocks/popup/__design/popup__design_zoom.css);
+@import url(../blocks/popup/__design/popup__design_add-element.css);
+@import url(../blocks/popup/__design/popup__design_edit-profile.css);
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__title-zoom/popup__title-zoom.css);
+@import url(../blocks/popup/__image_zoom/popup__image_zoom.css);
 @import url(../blocks/popup/__submit-btn/popup__submit-btn.css);
+@import url(../blocks/popup/__submit-btn/_add-element/popup__submit-btn_add-element.css);
+@import url(../blocks/popup/__submit-btn/_edit-profile/popup__submit-btn_edit-profile.css);
 @import url(../blocks/popup/__close-btn/popup__close-btn.css);
+@import url(../blocks/popup/__close-btn/_add-new-element/popup__close-btn_add-new-element.css);
+@import url(../blocks/popup/__close-btn/_edit-profile/popup__close-btn_edit-profile.css);
+@import url(../blocks/popup/__close-btn/_zoom-image/popup__close-btn_zoom-image.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__input/_form/popup__input_form_name.css);
 @import url(../blocks/popup/__input/_form/popup__input_form_about.css);
+@import url(../blocks/popup/__input/_form/popup__input_form_title.css);
+@import url(../blocks/popup/__input/_form/popup__input_form_link.css);
+@import url(../blocks/template/template.css);
 
 
 
@@ -36,6 +51,28 @@
 
 
 
+
+
+ 
+
+
+
+
+.popup__title-zoom{
+  position: absolute;
+  bottom: -22px;
+  left: 0;
+  width: 291px;
+  height: 12px;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+  margin: 0px auto auto 0px;
+  color: #FFFFFF;
+  background-color: transparent;
+}
 
 
 
