--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,6 +1,7 @@
 .profile__avatar {
     height: 120px;
     width: 120px;
+    border-radius: 90px;
  }
 @media screen and (max-width: 538px){
     .profile__avatar {
