9 работа сделано: удаление карточки

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -51,16 +51,82 @@
 @import url(../blocks/popup/__input/_form/popup__input_form_title.css);
 @import url(../blocks/popup/__input/_form/popup__input_form_link.css);
 @import url(../blocks/template/template.css);
+.element__remove_clear{
+    display: none;
+}
+
+.profile__avatar-edit {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 120px;
+    width: 120px;
+    padding: 0;
+    border: none;
+    border-radius: 90px;
+    z-index: 1;
+ }
+ @media screen and (max-width: 1008px){
+    .profile__avatar-edit {
+        top: 20px}}
+        @media screen and (max-width: 930px){
+            .profile__avatar-edit {
+                top: 0}}
+                @media screen and (max-width: 900px){
+                    .profile__avatar-edit {
+                        top: 20px}}
+                        @media screen and (max-width: 831px){
+                            .profile__avatar-edit {
+                                top: 0}}
+                                @media screen and (max-width: 399px){
+                                    .profile__avatar-edit {
+                                        left: 115px;}}
+                                        @media screen and (max-width: 340px){
+                                            .profile__avatar-edit {
+                                                left: 89px;
+                                    } @media screen and (max-width: 320px){
+                                        .profile__avatar-edit {
+                                            left: 81px;
+                                        }}}
+
+ .profile__avatar-edit:hover {
+    cursor: pointer;
+    background-image: url(../images/method-draw-image1q.png);
+    background-color: black;
+    background-size: 26px 26px;
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: .7;
+    
+ }
 
 
+ .popup__window-avatar {
+    height: 272px;
+    }
 
+    .popup__error_area_avatar {
+        top: 148px;
+    }
 
-
-
-
-
-
-
+    .element__likeSum {
+        position: absolute;
+        height: 23px;
+        width: 10px;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-color: transparent;
+        font-size: 13px;
+        line-height: 16px;
+        outline: none;
+        margin: 0;
+        border: none;
+        padding: 0;
+        bottom: 22px;
+        right: 20px;
+         }
+        
 
 
  
