9 работа сделано: поставка лайка.

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -126,7 +126,9 @@
         bottom: 22px;
         right: 20px;
          }
-        
+         .popup__submit-btn_delete-confirm {
+             
+         }
 
 
  
