--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -18,6 +18,7 @@
 @import url(../blocks/element/__title/element__title.css);
 @import url(../blocks/element/__like/element__like.css);
 @import url(../blocks/element/__like/_active/element__like_active.css);
+@import url(../blocks/element/__likeSum/element__likeSum.css);
 @import url(../blocks/element/__remove/element__remove.css);
 @import url(../blocks/element/__remove/_clear/element__remove_clear.css);
 @import url(../blocks/footer/footer.css);
@@ -57,7 +58,11 @@
 @import url(../blocks/popup/__input/_form/popup__input_form_title.css);
 @import url(../blocks/popup/__input/_form/popup__input_form_link.css);
 @import url(../blocks/template/template.css);
-
+.lll::before{
+    border: ;
+    background-color: black;
+    opacity: .5;
+}
 
 
 
@@ -68,25 +73,8 @@
 
  
 
-    .element__likeSum {
-        position: absolute;
-        height: 23px;
-        width: 10px;
-        background-size: contain;
-        background-repeat: no-repeat;
-        background-color: transparent;
-        font-size: 13px;
-        line-height: 16px;
-        outline: none;
-        margin: 0;
-        border: none;
-        padding: 0;
-        bottom: 22px;
-        right: 20px;
-         }
-         .popup__submit-btn_delete-confirm {
-             
-         }
+    
+         
 
 
  
