--- a/src/blocks/profile/__edit-avatar/profile__edit-avatar.css
+++ b/src/blocks/profile/__edit-avatar/profile__edit-avatar.css
@@ -1,4 +1,4 @@
-.profile__avatar_edit {
+.profile__edit-avatar {
     
     opacity: 0;
     position: absolute;
@@ -12,48 +12,48 @@
     z-index: 1;
 }
 @media screen and (max-width: 1008px) {
-    .profile__avatar_edit {
+    .profile__edit-avatar {
         top: 20px;
     }
 }
 @media screen and (max-width: 930px) {
-    .profile__avatar_edit {
+    .profile__edit-avatar {
         top: 0;
     }
 }
 @media screen and (max-width: 900px) {
-    .profile__avatar_edit {
+    .profile__edit-avatar {
         top: 18px;
     }
 }
 @media screen and (max-width: 831px) {
-    .profile__avatar_edit {
+    .profile__edit-avatar {
         top: 0;
     }
 }
 @media screen and (max-width: 399px) {
-    .profile__avatar_edit {
+    .profile__edit-avatar {
         left: 106px;
     }
 }
 @media screen and (max-width: 350px) {
-    .profile__avatar_edit {
+    .profile__edit-avatar {
         left: 95px;
     }
     @media screen and (max-width: 340px) {
-        .profile__avatar_edit {
+        .profile__edit-avatar {
             left: 89px;
         }
     }
     @media screen and (max-width: 320px) {
-        .profile__avatar_edit {
+        .profile__edit-avatar {
             left: 81px;
         }
     }
 }
 
 
- .profile__avatar_edit:hover {
+ .profile__edit-avatar:hover {
     cursor: pointer;
     background-image: url(../../../images/avatarEdit.png);
     background-color: black;
