--- a/src/blocks/profile/__avatarIcon/profile__avatarIcon.css
+++ b/src/blocks/profile/__avatarIcon/profile__avatarIcon.css
@@ -1,15 +1,15 @@
-.profile__avatar {
+.profile__avatarIcon {
     height: 120px;
     width: 120px;
     border-radius: 90px;
  }
 
 @media screen and (max-width: 538px){
-    .profile__avatar {
+    .profile__avatarIcon {
         display: flex;
         flex-direction: row;
         justify-content: center;}}
 
  @media screen and (max-width: 404px){
-    .profile__avatar {
+    .profile__avatarIcon {
         margin: 0 auto 0 auto;}}
