--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -31,6 +31,7 @@
 @import url(../blocks/popup/__window_delete-confirm/popup__window_delete-confirm.css);
 @import url(../blocks/popup/_edit-profile/popup_edit-profile.css);
 @import url(../blocks/popup/_zoom/popup_zoom.css);
+@import url(../blocks/popup/_avatar/popup_avatar.css);
 @import url(../blocks/popup/_add-element/popup_add-element.css);
 @import url(../blocks/popup/__error/popup__error.css);
 @import url(../blocks/popup/__error/_area/popup__error_area_name.css);
